objects/ResolutionLink__c.object
<CustomObject><fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>ResolutionLinks</relationshipLabel>
        <relationshipName>ResolutionLinks</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields><fields>
        <fullName>Web_Command__c</fullName>
        <label>Web Command</label>
        <length>255</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>DocLink in Siebel. Tech Support to use to store links that are used and referenced for case resolution.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Private</externalSharingModel><label>ResolutionLink</label><nameField>
        <displayFormat>RL-{0000}</displayFormat>
        <label>ResolutionLink #</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>ResolutionLinks</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All</fullName>
        <columns>Case__c</columns>
        <columns>URL__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>